--- a/courses/pcmi/2010/teran/notes/notes.tex
+++ b/courses/pcmi/2010/teran/notes/notes.tex
@@ -38,7 +38,7 @@
 \mainmatter
 
 \LectureSeries[The Mathematics of Image Processing]
-{Simulation of elasticity, biomechanics and virtual surgery \author{Joseph M. Teran}}
+{Simulation of elasticity, biomechanics, and virtual surgery \author{Joseph M. Teran}}
 
 \address{UCLA Mathematics Department, Box 951555, Los Angeles, CA 90095-1555}
 \email{jteran@math.ucla.edu}
