--- a/courses/pcmi/2010/teran/notes/lecture1.tex
+++ b/courses/pcmi/2010/teran/notes/lecture1.tex
@@ -2,7 +2,7 @@
 
 \section*{Kinematics}
 
-I will go through the basic continuum mechanics for describing the \emph{initial boundary value problems} (IBVPs) for deformable objects as quickly as possible with an emphasis on only those details necessary for implementing a basic \emph{finite element method} (FEM) type simulation (see the text \cite{BW08} for more details). We will quantify the deformation of the objects of interest in terms of the mapping $\boldsymbol{\phi}$ between an initial (or material) $\mathbf{B}_0\in\mathbb{R}^2$ and current (or deformed) $\mathbf{B}_t\in\mathbb{R}^2$ configuration (we'll just be covering 2D for simplicity). Let's introduce the convention that points in $\mathbf{B}_0$ we label as $\mathbf{X}$ and points in $\mathbf{B}_t$ we label as $\mathbf{x}$ (see Figure \ref{fig:phi}). I.e. $\mathbf{B}_0=\{\mathbf{X}\}$ and $\mathbf{B}_t=\{\mathbf{x}\}$ so
+I will go through the basic continuum mechanics for describing the \emph{initial boundary value problems} (IBVPs) for deformable objects as quickly as possible with an emphasis on only those details necessary for implementing a basic \emph{finite element method} (FEM) type simulation (see the text \cite{BW08} for more details). We will quantify the deformation of the objects of interest in terms of the mapping $\boldsymbol{\phi}$ between an initial (or material) $\mathbf{B}_0\in\mathbb{R}^2$ and current (or deformed) $\mathbf{B}_t\in\mathbb{R}^2$ configuration (we'll just be covering 2D for simplicity). Let's introduce the convention that points in $\mathbf{B}_0$ we label as $\mathbf{X}$ and points in $\mathbf{B}_t$ we label as $\mathbf{x}$ (see Figure~\ref{fig:phi}). I.e. $\mathbf{B}_0=\{\mathbf{X}\}$ and $\mathbf{B}_t=\{\mathbf{x}\}$ so
 \begin{equation*}
 \boldsymbol{\phi}(\cdot,t) \colon \mathbf{B}_0 \to \mathbf{B}_t \quad \text{and} \quad \boldsymbol{\phi}(\mathbf{X},t) = \mathbf{x}
 \end{equation*}
@@ -27,7 +27,7 @@ Again, I will only present the essential details for getting started with elasto
 \begin{equation*}
 \rho_0(\mathbf{X}) \frac{\partial^2 \mathbf{u}}{\partial t^2} = \nabla^{\mathbf{X}} \cdot \mathbf{P} + \mathbf{f}^{\text{ext}}.
 \end{equation*}
-Here, $\rho_0$ is the mass density of the material, $\mathbf{f}^\text{ext}$ is an externally applied force, and $\mathbf{P}$ is the first Piola-Kirchoff Stress which describes the forces of interaction in the material (specifically, $\mathbf{P}$ relates the normal of an infinitesimal surface in the material to the forces applied by one side of the material to the other; see Figure \ref{fig:phi}). We will discuss the form of this stress in the coming sections. For now, note that it is a matrix valued function over the material:
+Here, $\rho_0$ is the mass density of the material, $\mathbf{f}^\text{ext}$ is an externally applied force, and $\mathbf{P}$ is the first Piola-Kirchoff Stress which describes the forces of interaction in the material (specifically, $\mathbf{P}$ relates the normal of an infinitesimal surface in the material to the forces applied by one side of the material to the other; see Figure~\ref{fig:phi}). We will discuss the form of this stress in the coming sections. For now, note that it is a matrix valued function over the material:
 \begin{equation*}
 \mathbf{P} \colon \mathbf{B}_0 \times [0,T] \to \mathbb{R}^{2\times2}.
 \end{equation*}
@@ -86,7 +86,7 @@ The Young's modulus is a measure of the stiffness of the material and should be 
 \label{fig:fibers}
 \end{figure}
 
-The models described so far are both isotropic. That is, the elastic response to deformation is the same regardless of which direction the material is stretched in. This is not very accurate for many fibrous tissues in the anatomy. In these cases, we need an auxiliary function $\mathbf{g} \colon \mathbf{B}_0 \to \mathbb{R}^2$ that describes the local fiber direction in the material configuration of the tissue (see Figure \ref{fig:fibers}). The specialized response in the fiber direction can be incorporated by changing the original isotropic strain energy density to include a term based on the stretching in the fiber direction: $\mathbf{g}^T \mathbf{F}^T \mathbf{F} \mathbf{g}$. That is, the modification looks like
+The models described so far are both isotropic. That is, the elastic response to deformation is the same regardless of which direction the material is stretched in. This is not very accurate for many fibrous tissues in the anatomy. In these cases, we need an auxiliary function $\mathbf{g} \colon \mathbf{B}_0 \to \mathbb{R}^2$ that describes the local fiber direction in the material configuration of the tissue (see Figure~\ref{fig:fibers}). The specialized response in the fiber direction can be incorporated by changing the original isotropic strain energy density to include a term based on the stretching in the fiber direction: $\mathbf{g}^T \mathbf{F}^T \mathbf{F} \mathbf{g}$. That is, the modification looks like
 \begin{equation*}
 \Psi \left( \mathbf{F} \right) = \Psi_{\text{iso}} \left( \mathbf{F} \right) + \Psi_{\text{fiber}} \left( \mathbf{g}^T \mathbf{F}^T \mathbf{F} \mathbf{g} \right).
 \end{equation*}
@@ -167,7 +167,7 @@ since $u(X) = u_i N_i(X)$ and $F(X) = \frac{\partial u}{\partial X}(X) + 1 = u_i
 
 \section*{Inversion}
 
-The deformation mapping $\boldsymbol{\phi}$ must be a bijection (one-to-one and onto) if we are to strictly apply the principles of continuum mechanics. This precludes many solutions you might otherwise expect to see. For example, for the 1D case, the solution must never have a derivative less than or equal to zero. I.e. many functions we are used to solving for (see Figure \ref{fig:inversion}) are not, strictly speaking, allowable. Unfortunately, this constraint will not always be naturally achieved by our discretization. For some models (e.g. linear elasticity) it is okay that the discrete solution does not satisfy the inversion constraint. For others like Neo-Hookean, we would end up taking the natural log of a negative number. This log term is there to prevent excessive compression. However, it has the consequence that our equations become incredibly stiff under compression. Such behavior can be very problematic numerically and must be avoided in a surgical simulator. A general approach to improving robustness to discretely inverted (i.e., non-bijective) deformation mappings was developed in \cite{Irving06}. I will not go through all of the details for the sake of time. However, I will show how we can apply the principles developed in this work to our simple Neo-Hookean model.
+The deformation mapping $\boldsymbol{\phi}$ must be a bijection (one-to-one and onto) if we are to strictly apply the principles of continuum mechanics. This precludes many solutions you might otherwise expect to see. For example, for the 1D case, the solution must never have a derivative less than or equal to zero. I.e. many functions we are used to solving for (see Figure~\ref{fig:inversion}) are not, strictly speaking, allowable. Unfortunately, this constraint will not always be naturally achieved by our discretization. For some models (e.g. linear elasticity) it is okay that the discrete solution does not satisfy the inversion constraint. For others like Neo-Hookean, we would end up taking the natural log of a negative number. This log term is there to prevent excessive compression. However, it has the consequence that our equations become incredibly stiff under compression. Such behavior can be very problematic numerically and must be avoided in a surgical simulator. A general approach to improving robustness to discretely inverted (i.e., non-bijective) deformation mappings was developed in \cite{Irving06}. I will not go through all of the details for the sake of time. However, I will show how we can apply the principles developed in this work to our simple Neo-Hookean model.
 
 \begin{figure}
 %\includegraphics[width=\columnwidth]{images/buddha_gears}
@@ -175,46 +175,52 @@ The deformation mapping $\boldsymbol{\phi}$ must be a bijection (one-to-one and 
 %\label{fig:inversion2}
 \end{figure}
 
-The problematic term in the Neo-Hookean model is the natural log. If we replace the log with another function $r$, we can improve the robustness of our numerical simulation to inversion. This function should look very nearly like the natural log around $J=1$ to prevent loss of accuracy, but should not have a singularity at $J=0$. We can do this by taking $r$ to be the cubic Taylor expansion of the log around $J=1$ (see Figure \ref{inversion3}). With this choice, we have the following expressions for the Neo-Hookean hyperelastic strain energy density and first Piola-Kirchoff stresses;
-$$
-\Psi(\mathbf{F})=\frac{\mu}{2}(F_{ij}F_{ij}-2)-\mu{r}(J)+\frac{\lambda}{2}r(J)^2
-$$
-$$
-\mathbf{P}(\mathbf{F})=\mu\mathbf{F}+\left[r(J)\lambda-\mu\right]r'(J)\left[\begin{array}{cc}
-F_{22} & -F_{12}\\
--F_{21} & F_{11} \end{array}\right].
-$$
-In Figure \ref{inversion3}, we see the effect of this modification in 1D. This new model is well defined through inversion, but accurately reflects the original model when very near the undeformed configuration. We can make further adjustments to prevent problematic values of $\frac{\partial P}{\partial F}$ (e.g. we wanted this to be positive for our 1D example). The treatment of these terms is addressed in \cite{TeranQuas05}.
+The problematic term in the Neo-Hookean model is the natural log. If we replace the log with another function $r$, we can improve the robustness of our numerical simulation to inversion. This function should look very nearly like the natural log around $J = 1$ to prevent loss of accuracy, but should not have a singularity at $J = 0$. We can do this by taking $r$ to be the cubic Taylor expansion of the log around $J = 1$ (see Figure~\ref{fig:inversion3}). With this choice, we have the following expressions for the Neo-Hookean hyperelastic strain energy density and first Piola-Kirchoff stresses:
+\begin{subequations}
+\begin{equation*}
+\Psi \left( \mathbf{F} \right) = \frac{\mu}{2} \left( F_{ij} F_{ji} - 2 \right) - \mu r(J) + \frac{\lambda}{2} r(J)^2
+\end{equation*}
+\begin{equation*}
+\mathbf{P} \left( \mathbf{F} \right) = \mu \mathbf{F} + \left( \lambda r(J) -\mu \right) r'(J) \begin{pmatrix} F_{22} & -F_{12} \\
+-F_{21} & F_{11} \end{pmatrix}.
+\end{equation*}
+\end{subequations}
+In Figure~\ref{fig:inversion3}, we see the effect of this modification in 1D. This new model is well-defined through inversion, but accurately reflects the original model when very near the undeformed configuration. We can make further adjustments to prevent problematic values of $\frac{\partial P}{\partial F}$ (e.g. we wanted this to be positive for our 1D example). The treatment of these terms is addressed in \cite{TeranQuas05}.
+
 \begin{figure}
 %\includegraphics[width=\columnwidth]{images/invertible_neo_hookean}
-\caption{The plots at the left are of the hyperelastic energy density of the 1D Neo-Hookean model. The plots at the right are of the 1D Neo-Hookean stresses. The blue curves are the unmodified Neo-Hookean model, the green curves result from replacing the log with it's cubic Taylor expansion around J=1. These are preferable for the sake of robustness.}
-\label{inversion3}
+\caption{The plots at the left are of the hyperelastic energy density of the 1D Neo-Hookean model. The plots at the right are of the 1D Neo-Hookean stresses. The blue curves are the unmodified Neo-Hookean model, the green curves result from replacing the log with it's cubic Taylor expansion around $J = 1$. These are preferable for the sake of robustness.}
+\label{fig:inversion3}
 \end{figure}
-\section*{Time stepping}
+
+\section*{Time Stepping}
+
 In general, our simulator will run the following loop:
-$$
+\begin{equation}
 \begin{array}{lc}
-\textrm{for} \ n=0:\textrm{N}_\textrm{final}\\
-\ \ -\textrm{Get user boundary condition input}\\
-\ \ -t=t+\Delta{t}\\
-\ \ -\textrm{Solve nonlinear system for displacements and velocities}\\
-\ \ -\textrm{Render solution to screen}\\
-\textrm{end}
- \end{array}
-$$
-The key factor is that the nonlinear system must be solved in less than one thirtieth of a second to maintain an interactive simulation rate. An example of a discretization of this system that allows for inertia is the following. Let $\mathbf{u}^m\in\mathbb{R}^n$ represent the spatially discrete displacements at time $m$ and let $\mathbf{v}^m\in\mathbb{R}^n$ represent the spatially discrete velocities. We can implement backward Euler by saying
-$$
-\mathbf{v}^{m+1}=\frac{\mathbf{u}^{m+1}-\mathbf{u}^{m}}{\Delta{t}}
-$$
+\text{for} \ n = 0 : N_\text{final} \\
+\quad \bullet \ \text{get user boundary condition input} \\
+\quad \bullet \ t \leftarrow t + \Delta{t} \\
+\quad \bullet \ \text{solve nonlinear system for displacements and velocities} \\
+\quad \bullet \ \text{render solution to screen}\\
+\text{end}
+\end{array}
+\end{equation}
+The key factor is that the nonlinear system must be solved in less than one thirtieth of a second to maintain an interactive simulation rate. An example of a discretization of this system that allows for inertia is the following. Let $\vec{u}^m \in \mathbb{R}^n$ represent the spatially discrete displacements at time $m$ and let $\vec{v}^m \in \mathbb{R}^n$ represent the spatially discrete velocities. We can implement backward Euler by saying
+\begin{equation*}
+\vec{v}^{m+1} = \frac{1}{\Delta t} \left( \vec{u}^{m+1} - \vec{u}^m \right)
+\end{equation*}
 and
-$$
-\rho_0\left[\frac{\frac{\mathbf{u}^{m+1}-\mathbf{u}^{m}}{\Delta{t}}-\mathbf{v}^{m}}{\Delta{t}}\right]=\nabla\cdot\mathbf{P}(\mathbf{F}(\mathbf{u}^{m+1}))+\mathbf{f}^\textrm{ext}
-$$
-where we solve this final system by following a similar FEM procedure to the quasistatic case for $\mathbf{u}^{m+1}$. Specifically, we'd get 
-$$
-q^a_i(\mathbf{u}^{m+1})=M_{(ai)(bj)}u^{m+1}_{bj}+\Delta{t}^2\int_{\mathbf{B}_0}N^a_{,j}P_{ij}d\mathbf{X}-M_{(ai)(bj)}\left[u^{m+1}_{bj}+\Delta{t}v^{m}_{bj}\right]-
-$$
-$$
-\int_{\partial\mathbf{B}_0}N^aP_{ij}n_jdS(\mathbf{X})-\int_{\mathbf{B}_0}N^af^\textrm{ext}_id\mathbf{X}
-$$
-and $M_{(ai)(bj)}=\int_{\mathbf{B}_0}N^a\rho_0N^b\delta_{ij}d\mathbf{X}$
+\begin{equation*}
+\rho_0 \frac{1}{\Delta t} \left( \frac{1}{\Delta t} \left( \vec{u}^{m+1} - \vec{u}^m \right) - \vec{v}^m \right) = \nabla^{\mathbf{X}} \cdot \mathbf{P} \left( \mathbf{F} \left( \vec{u}^{m+1} \right) \right) + \mathbf{f}^{\text{ext}}
+\end{equation*}
+where we solve this final system by following a similar FEM procedure to the quasistatic case for $\vec{u}^{m+1}$. Specifically, we'd get
+\begin{align*}
+q^a_i \left( \vec{u}^{m+1} \right)
+& = M_{ai;bj} u^{m+1}_{bj} \\
+& \quad {} + \Delta t^2 \int_{\mathbf{B}_0} N^a_{,j} P_{ij} d\mathbf{X} \\
+& \quad {} - M_{ai;bj} \left( u^{m+1}_{bj} + \Delta{t} v^m_{bj} \right) \\
+& \quad {} - \int_{\partial\mathbf{B}_0} N^a P_{ij} n_j d\mathbf{S}(\mathbf{X}) \\
+& \quad {} - \int_{\mathbf{B}_0} N^a f^{\text{ext}}_i d\mathbf{X}
+\end{align*}
+and $M_{ai;bj}=\int_{\mathbf{B}_0} N^a \rho_0 N^b \delta_{ij} d\mathbf{X}$.
